--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="css/reset">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" /> 
+
 </head>
 <body>
 
