--- a/index.html
+++ b/index.html
@@ -2,20 +2,40 @@
 <html>
 <head>
 	<meta charset="utf-8">
+
 	<title>Da Vinci University</title>
 
-	<link rel="stylesheet" type="text/css" href="css/reset">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon" />
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" /> 
-
 </head>
 <body>
-
 	<header>
-		<div class='wrapper'></div>
+		<div></div>
 	</header>
-
+	<nav>
+		
+	</nav>
+	<div class="wrapper">
+		<div id="content">
+			<article>
+				
+			</article>
+			<article>
+				
+			</article>
+		</div>
+		<aside>
+			
+		</aside>
+	</div>
+	<footer>
+		
+	</footer>
+	<div id="footbar">
+			
+	</div>
 </body>
 </html>
