add fixed nav bar

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon" />
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" /> 
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
-	<header>
+	<header id="header">
 		<div></div>
 	</header>
-	<nav>
+	<nav id="navi">
 		
 	</nav>
 	<div class="wrapper">
@@ -37,5 +39,17 @@
 	<div id="footbar">
 			
 	</div>
+
+	<script type="text/javascript">
+		$(window).bind('scroll', function () {
+		    if ($(window).scrollTop() >= 75) {
+		        $('#navi').addClass('fixed');
+		        $('#header').addClass('marg');
+		    } else {
+		        $('#navi').removeClass('fixed');
+		        $('#header').removeClass('marg');
+		    }
+		});
+	</script>
 </body>
 </html>
