--- a/index.html
+++ b/index.html
@@ -16,52 +16,85 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
-	<header id="header">
-		<div></div>
+	<header>
+		<div id="headWrap">
+			<img src="img/logo.png" height="60">
+		</div>
 	</header>
 	<div id="navWrap">
 		<nav>
-			<div id="navImg">fadelogo</div>
 			<ul>	
 				<li><a href="">Home</a></li>
 				<li><a href="">About</a></li>
 				<li><a href="">Courses</a></li>
-				<li><a href="">Contact</a></li>
 				<li><a href="">Events</a></li>
 				<li><a href="">News</a></li>
+				<li><a href="">Contact</a></li>
+
 			</ul>
 		</nav>
 	</div>
 	<div class="wrapper">
 		<div id="content">
 			<article>
-				
+				<h1>Hello</h1>
 			</article>
 			<article>
-				
+				<h1>Bye</h1>
 			</article>
 		</div>
 		<aside>
-			
+			<div>
+				Newsfeed
+			</div>
+			<div>
+				Weather
+			</div>
+			<div id="social">
+				<div>
+					<img src="img/facebook.png" alt="facebook">
+				</div>
+				<div>
+					<img src="img/twitter.png" alt="twitter">
+				</div>
+				<div>
+					<img src="img/youtube.png" alt="youtube">
+				</div>				
+			</div>
 		</aside>
 	</div>
 	<footer>
-		
+		<div class="footWrap">
+			<div class="footBox">
+				<h3>Locations</h3>
+				<ul>
+					<li>Emmen</li>
+					<li>Groningen</li>
+
+				</ul>
+			</div>
+			<div class="footBox">
+				<h3>Da Vinci University</h3>
+				<ul>
+					<li>Home</li>
+					<li>About</li>
+					<li>Courses</li>
+					<li>Events</li>
+					<li>News</li>
+					<li>Contact</li>
+
+				</ul>
+			</div>
+			<div class="footBox">
+				<h3>Open Day Registration</h3>
+			</div>
+		</div>
 	</footer>
 	<div id="footbar">
+		<div class="footWrap">
+			<span>Da Vinci University</span>
+		</div>
 			
 	</div>
-
-	<script type="text/javascript">
-		$(window).bind('scroll', function () {
-		    if ($(window).scrollTop() >= 75) {
-		        $('#navWrap').addClass('fixed');
-		        $('#header').addClass('marg');
-		    } else {
-		        $('#navWrap').removeClass('fixed');
-		        $('#header').removeClass('marg');
-		    }
-		});
-	</script>
 </body>
 </html>
