--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <body>
 	<header>
 		<div id="headWrap">
-			<img src="img/logo.png" height="60">
+			<div id='logo'><img src="img/logo.png" height="60"></div>
+			<div id='name'><h1>Da Vinci University</h1></div>
+			<div id='nameCursive'><p>Learning never exhausts the mind</p></div>
 		</div>
 	</header>
 	<div id="navWrap">
