--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
 	<header>
 		<div id="headWrap">
-			<div id='logo'><img src="img/logo.png" height="60"></div>
+			<div id='logo'><img src="img/logo.png" height="60" alt="logo"></div>
 			<div id='name'><h1>Da Vinci University</h1></div>
 			<div id='nameCursive'><p>Learning never exhausts the mind</p></div>
+
+			<a href="italian/"><img id="flag" src="img/it_flag.png" alt="italian flag"></a>
 		</div>
 	</header>
 	<div id="navWrap">
@@ -39,10 +40,10 @@
 	<div class="wrapper">
 		<div id="content">
 			<article>
-				<h1>Hello</h1>
+				<h2>Hello</h2>
 			</article>
 			<article>
-				<h1>Bye</h1>
+				<h2>Bye</h2>
 			</article>
 		</div>
 		<aside>
@@ -94,7 +95,8 @@
 	</footer>
 	<div id="footbar">
 		<div class="footWrap">
-			<span>Da Vinci University</span>
+			Da Vinci University
+			<span id="copy">&copy; 2018</span>
 		</div>
 			
 	</div>
