--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<li><a href="">About</a></li>
 				<li><a href="">Courses</a></li>
 				<li><a href="">Events</a></li>
-				<li><a href="">News</a></li>
+				<li><a href="news.html">News</a></li>
 				<li><a href="">Contact</a></li>
 
 			</ul>
