--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
+
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon" />
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 
@@ -15,11 +16,15 @@
 <body>
 	<header>
 		<div id="headWrap">
-			<div id='logo'><img src="img/logo.png" height="60" alt="logo"></div>
-			<div id='name'><h1>Da Vinci University</h1></div>
-			<div id='nameCursive'><p>Learning never exhausts the mind</p></div>
+			<div id="logo">
+				<img src="img/logo.png">
+				<div id="vinci">Da Vinci University</div>
+				<div id="learn">Learning never exhausts the mind</div>
+			</div>
 
-			<a href="italian/"><img id="flag" src="img/it_flag.png" alt="italian flag"></a>
+			<div id="flag">
+				<img src="img/it_flag.png" alt="italian flag">
+			</div>
 		</div>
 	</header>
 	<div id="navWrap">
@@ -38,10 +43,36 @@
 	<div class="wrapper">
 		<div id="content">
 			<article>
-				<h2>Hello</h2>
+				<h2>Study international at<br>Da Vinci University</h2>
+				<p>
+					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?
+				</p>
+			</article>
+			<article class="dualbox">
+				<div class="indexbox" id="campusbox">
+					<a href="">
+						<div class="overlay">
+							Campus
+						</div>
+					</a>
+				</div>
+				<div class="indexbox" id="coursebox">
+					<a href="">
+						<div class="overlay">
+							Courses
+						</div>
+					</a>
+				</div>			
 			</article>
 			<article>
-				<h2>Bye</h2>
+				<h2>More than just a Number</h2>
+				<p>
+				quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?
+				</p>
+
+				<p>
+				magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit? quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
+				</p>
 			</article>
 		</div>
 		<aside>
