--- a/news.html
+++ b/news.html
@@ -18,11 +18,15 @@
 <body>
 	<header>
 		<div id="headWrap">
-			<div id='logo'><img src="img/logo.png" height="60" alt="logo"></div>
-			<div id='name'><h1>Da Vinci University</h1></div>
-			<div id='nameCursive'><p>Learning never exhausts the mind</p></div>
+			<div id="logo">
+				<img src="img/logo.png">
+				<div id="vinci">Da Vinci University</div>
+				<div id="learn">Learning never exhausts the mind</div>
+			</div>
 
-			<a href="italian/"><img id="flag" src="img/it_flag.png" alt="italian flag"></a>
+			<div id="flag">
+				<img src="img/it_flag.png" alt="italian flag">
+			</div>
 		</div>
 	</header>
 	<div id="navWrap">
