events+ added events page to the other pages

--- a/events.html
+++ b/events.html
@@ -45,7 +45,7 @@
 	<div class="wrapper">
 		<div id="content">
 			<article>
-				<div><h1>NewsItem1</h1> <span>19-10-2017</span> </div>
+				<div><h1>Event1</h1> <span>19-10-2017</span> </div>
 				<p>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ac mattis leo. Donec accumsan, libero ut iaculis pharetra, nibh eros dignissim sem, in viverra nisi odio quis nisl. Aliquam pharetra augue id varius commodo. Nullam vitae lacus at nibh hendrerit porttitor. Phasellus dapibus in arcu et eleifend. Fusce non maximus felis. Etiam nec porttitor ipsum. In sodales feugiat dolor et bibendum. Duis quis urna dolor.<br><br>
 
@@ -55,7 +55,7 @@
 				</p>
 			</article>
 			<article>
-				<div><h1>NewsItem2</h1><span>17-10-2017</span></div>
+				<div><h1>Event2</h1><span>17-10-2017</span></div>
 				<p>
 					Pellentesque lobortis, quam blandit mollis dictum, quam erat eleifend eros, ac rhoncus augue dui bibendum tortor. Sed vitae lectus a nibh pulvinar sodales eu eu ante. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque nulla purus, fermentum sed neque a, molestie gravida orci. Maecenas cursus laoreet nibh, id semper nibh scelerisque nec. Proin at mi interdum, ullamcorper elit vel, imperdiet dui. Aenean id ligula sed enim dapibus tincidunt id nec nisi. Sed eget massa lacus. Vestibulum tincidunt semper ante et congue. Fusce consequat sodales sem eu pellentesque. Curabitur ac tristique elit. Vivamus auctor sagittis lacus quis vulputate. Morbi eros leo, posuere eu orci nec, congue tristique erat. Sed consectetur nisi urna, quis fermentum ipsum auctor at.<br><br>
 
