headings in contact

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="./contact.css">
+	<link rel="stylesheet" type="text/css" href="css/contact.css">
 
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon" />
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -40,7 +40,7 @@
 	<div class="wrapper">
 		<div id="content">
 			<article>
-				<div class="contact">Have any questions?</div>
+				<h2>Have any questions?</h2>
 				<div class="contents">We answer as many questions as we can on our website. If you have any questions that you feel are not answered on our website, feel free to contact us! You can send us your questions by sending an e-mail to internationaloffice@davinciuniversity.nl or by completing the form below.
 				</div>
 				<div class="form">
@@ -79,7 +79,7 @@
 			</article>
 
 			<article>
-				<div class="contact">Opening hours</div>
+				<h2>Opening hours</h2>
 				<div class="contents">	
 					<div id="days">
 						<ul>
@@ -104,7 +104,7 @@
 					During weekends and public holidays Da Vinci University is closed.
 				</div>
 				<div id="blank"></div>
-				<div class="contact"> Contact details </div>
+				<h2> Contact details </h2>
 				<div class="contents">
 					<ul>
 						<li>Telephone number: +31 (0)88 019 3789 </li>
@@ -113,7 +113,7 @@
 				</div>
 			</article>
 			<article>
-				<div class="contact">Student Service Desk</div>
+				<h2>Student Service Desk</h2>
 				<div class="contents">	For general information about studying at Da Vinci University, please contact the Student Service Desk, which is located at the Roeterseiland Campus in Emmen. The desk is open Monday to Friday from 09:00 to 17:00.
 				</div>
 
