--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="./contact.css">
+	<link rel="stylesheet" type="text/css" href="css/contact.css">
 
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon" />
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -39,6 +39,42 @@
 	</div>
 	<div class="wrapper">
 		<div id="content">
+			
+
+			<article>
+				<div class="contact">Opening hours</div>
+				<div class="contents">	
+					<div id="days">
+						<ul>
+							<li>Monday</li>
+							<li>Tuesday</li>
+							<li>Wednesday</li>
+							<li>Thursday</li>
+							<li>Friday</li>
+						</ul>
+					</div>
+					<div id="hours">
+						<ul>
+							<li>8:00 - 18:30 </li>
+							<li>8:00 - 18:30 </li>
+							<li>8:00 - 18:30 </li>
+							<li>8:00 - 19:30 </li>
+							<li>8:00 - 16:30 </li>
+						</ul>
+					</div>
+				</div>
+				<div class="contents">
+					During weekends and public holidays Da Vinci University is closed.
+				</div>
+				<div id="blank"></div>
+				<div class="contact"> Contact details </div>
+				<div class="contents">
+					<ul>
+						<li>Telephone number: +31 (0)88 019 3789 </li>
+						<li>E-mail address: internationaloffice@davinciuniversity.nl </li>
+					</ul>
+				</div>
+			</article>
 			<article>
 				<div class="contact">Have any questions?</div>
 				<div class="contents">We answer as many questions as we can on our website. If you have any questions that you feel are not answered on our website, feel free to contact us! You can send us your questions by sending an e-mail to internationaloffice@davinciuniversity.nl or by completing the form below.
@@ -77,44 +113,10 @@
 
                         </div>
 			</article>
-
 			<article>
-				<div class="contact">Opening hours</div>
+				<div class="contact">Where can you find us?</div>
 				<div class="contents">	
-					<div id="days">
-						<ul>
-							<li>Monday</li>
-							<li>Tuesday</li>
-							<li>Wednesday</li>
-							<li>Thursday</li>
-							<li>Friday</li>
-						</ul>
-					</div>
-					<div id="hours">
-						<ul>
-							<li>8:00 - 18:30 </li>
-							<li>8:00 - 18:30 </li>
-							<li>8:00 - 18:30 </li>
-							<li>8:00 - 19:30 </li>
-							<li>8:00 - 16:30 </li>
-						</ul>
-					</div>
-				</div>
-				<div class="contents">
-					During weekends and public holidays Da Vinci University is closed.
-				</div>
-				<div id="blank"></div>
-				<div class="contact"> Contact details </div>
-				<div class="contents">
-					<ul>
-						<li>Telephone number: +31 (0)88 019 3789 </li>
-						<li>E-mail address: internationaloffice@davinciuniversity.nl </li>
-					</ul>
-				</div>
-			</article>
-			<article>
-				<div class="contact">Student Service Desk</div>
-				<div class="contents">	For general information about studying at Da Vinci University, please contact the Student Service Desk, which is located at the Roeterseiland Campus in Emmen. The desk is open Monday to Friday from 09:00 to 17:00.
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d77226.35012579599!2d6.835303946248105!3d52.78047556573554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b7e622998cc89d%3A0xbf2c3709eb35b55b!2sEmmen!5e0!3m2!1sro!2snl!4v1508491031723" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
 
 			</article>
