--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,15 @@
 <body>
 	<header>
 		<div id="headWrap">
-			<div id='logo'><img src="img/logo.png" height="60"></div>
-			<div id='name'><h1>Da Vinci University</h1></div>
-			<div id='nameCursive'><p>Learning never exhausts the mind</p></div>
+			<div id="logo">
+				<img src="img/logo.png">
+				<div id="vinci">Da Vinci University</div>
+				<div id="learn">Learning never exhausts the mind</div>
+			</div>
+
+			<div id="flag">
+				<img src="img/it_flag.png" alt="italian flag">
+			</div>
 		</div>
 	</header>
 	<div id="navWrap">
@@ -42,7 +48,7 @@
 			
 
 			<article>
-				<div class="contact">Opening hours</div>
+				<h2>Opening hours</h2>
 				<div class="contents">	
 					<div id="days">
 						<ul>
@@ -63,22 +69,22 @@
 						</ul>
 					</div>
 				</div>
-				<div class="contents">
+				<p>
 					During weekends and public holidays Da Vinci University is closed.
-				</div>
-				<div id="blank"></div>
-				<div class="contact"> Contact details </div>
-				<div class="contents">
+				</p>
+
+				<h2> Contact details </h2>
+				<p>
 					<ul>
 						<li>Telephone number: +31 (0)88 019 3789 </li>
 						<li>E-mail address: internationaloffice@davinciuniversity.nl </li>
 					</ul>
-				</div>
+				</p>
 			</article>
 			<article>
-				<div class="contact">Have any questions?</div>
-				<div class="contents">We answer as many questions as we can on our website. If you have any questions that you feel are not answered on our website, feel free to contact us! You can send us your questions by sending an e-mail to internationaloffice@davinciuniversity.nl or by completing the form below.
-				</div>
+				<h2>Have any questions?</h2>
+				<p>We answer as many questions as we can on our website. If you have any questions that you feel are not answered on our website, feel free to contact us! You can send us your questions by sending an e-mail to internationaloffice@davinciuniversity.nl or by completing the form below.
+				</p>
 				<div class="form">
                             <?php
                             $text = $_POST['text'];
@@ -114,50 +120,9 @@
                         </div>
 			</article>
 			<article>
-<<<<<<< HEAD
-				<div class="contact">Where can you find us?</div>
-				<div class="contents">	
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d77226.35012579599!2d6.835303946248105!3d52.78047556573554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b7e622998cc89d%3A0xbf2c3709eb35b55b!2sEmmen!5e0!3m2!1sro!2snl!4v1508491031723" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-=======
-				<h2>Opening hours</h2>
-				<div class="contents">	
-					<div id="days">
-						<ul>
-							<li>Monday</li>
-							<li>Tuesday</li>
-							<li>Wednesday</li>
-							<li>Thursday</li>
-							<li>Friday</li>
-						</ul>
-					</div>
-					<div id="hours">
-						<ul>
-							<li>8:00 - 18:30 </li>
-							<li>8:00 - 18:30 </li>
-							<li>8:00 - 18:30 </li>
-							<li>8:00 - 19:30 </li>
-							<li>8:00 - 16:30 </li>
-						</ul>
-					</div>
-				</div>
-				<div class="contents">
-					During weekends and public holidays Da Vinci University is closed.
-				</div>
-				<div id="blank"></div>
-				<h2> Contact details </h2>
-				<div class="contents">
-					<ul>
-						<li>Telephone number: +31 (0)88 019 3789 </li>
-						<li>E-mail address: internationaloffice@davinciuniversity.nl </li>
-					</ul>
-				</div>
-			</article>
-			<article>
-				<h2>Student Service Desk</h2>
-				<div class="contents">	For general information about studying at Da Vinci University, please contact the Student Service Desk, which is located at the Roeterseiland Campus in Emmen. The desk is open Monday to Friday from 09:00 to 17:00.
->>>>>>> bf956c777c8b58776dceacb60de21aec88cb51d6
-				</div>
 
+				<h2>Where can you find us?</h2>	
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d77226.35012579599!2d6.835303946248105!3d52.78047556573554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b7e622998cc89d%3A0xbf2c3709eb35b55b!2sEmmen!5e0!3m2!1sro!2snl!4v1508491031723" width="625" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</article>
 		</div>
 		<aside>
