--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<ul>	
 				<li><a href="index.html">Home</a></li>
 				<li><a href="">About</a></li>
-				<li><a href="">Courses</a></li>
+				<li><a href="courses.html">Courses</a></li>
 				<li><a href="events.html">Events</a></li>
 				<li><a href="news.html">News</a></li>
 				<li><a href="contact.html">Contact</a></li>
@@ -57,7 +57,7 @@
 					</a>
 				</div>
 				<div class="indexbox" id="coursebox">
-					<a href="">
+					<a href="courses.html">
 						<div class="overlay">
 							Courses
 						</div>
