experements with the pictures

--- a/courses.html
+++ b/courses.html
@@ -40,8 +40,8 @@
 	</div>
 	<div class="wrapper">
 		<div id="content">
-			<article id="courseBox">
-				<div id='electricalEngineering'><h2>Electrical engineering</h2></div>
+			<article class="courseBox">
+				<div id='electricalEngineering'><div id="ex"><h2>Electrical engineering</h2></div></div>
 				<h3>Introduction</h3>
 				<p>
 					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
