Made the class reusable

--- a/courses.html
+++ b/courses.html
@@ -29,19 +29,23 @@
 		<nav>
 			<ul>	
 				<li><a href="index.html">Home</a></li>
-				<li><a href="">About</a></li>
+				<li><a href="about.html">About</a></li>
 				<li><a href="courses.html">Courses</a></li>
-				<li><a href="">Events</a></li>
-				<li><a href="news.html">News</a></li>
-				<li><a href="">Contact</a></li>
+				<li><a href="events.html">Events</a></li>
+				<li><a href="news.html.php">News</a></li>
+				<li><a href="contact.html">Contact</a></li>
 
 			</ul>
 		</nav>
 	</div>
 	<div class="wrapper">
 		<div id="content">
-			<article class="courseBox">
-				<div id='electricalEngineering'><div id="ex"><h2>Electrical engineering</h2></div></div>
+			<article>
+				<div id='electricalEngineering'>
+					<div class="overlay">
+						<p>Electrical engineering</p>
+					</div>
+				</div>
 				<h3>Introduction</h3>
 				<p>
 					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
@@ -52,17 +56,59 @@
 					Year three - this year you'll get to experience the field by going on an internship. Year four - You'll go on an exchange course - you can choose the country of interest.
 				</p>
 			</article>
-			<article id="courseBox">
-				<div id='informationTechnology'><img src="./img/courses/BuildingInstruments1.jpg"></div>
-				<h3>Information Technology</h3>
+
+			<article>
+				<div id='informationTechnology'>
+					<div class="bannerBackground">
+						<h2>Information technology</h2>
+					</div>
+				</div>
+					<h3>Introduction</h3>
+					<p>
+						The Bachelor's course in Information technology in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Information technology. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
+					</p>
+					<h3>Content</h3>
+					<p>
+						Year one - foundation phase. In the first half, you'll get to know the field of Information technology gets used to the study load.
+						Year two - The focus is shifted more towards the specific subjects in the study: software engineering and databases.
+						Year three - this year you'll get to experience the field by going on an internship. Year four - You'll go on an exchange course - you can choose the country of interest.
+					</p>
 			</article>
-			<article id="courseBox">
-				<div id='buildingInstruments'><img src="./img/courses/BuildingInstruments1.jpg"></div>
-				<h3>Information Technology</h3>
+
+			<article>
+				<div id='electronicMusic'>
+					<div class="bannerBackground">
+						<h2>Electronic music</h2>
+					</div>
+				</div>
+				<h3>Introduction</h3>
+				<p>
+					The Bachelor's course in Electronic music in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electronic music. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
+				</p>
+				<h3>Content</h3>
+				<p>
+					Year one - foundation phase. In the first half, you'll get to know the field of Electronic music gets used to the study load.
+					Year two - The focus is shifted more towards the specific subjects in the study. Year three - this year you'll get to experience the field by going on an internship. Year four - You'll go on an exchange course - you can choose the country of interest.
+				</p>
 			</article>
-			<article id="courseBox">
-				<div id='boxy'><img src="./img/courses/BuildingInstruments1.jpg"></div>
-				<h3>Information Technology</h3>
+
+			<article>
+				<div id='classicalInstruments'>
+					<div class="bannerBackground">
+						<h2>Building classical instruments</h2>
+					</div>
+				</div>
+				<h3>Introduction</h3>
+				<p>
+					The Bachelor's course in Classical instruments in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Classical instruments. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
+
+				</p>
+				<h3>Content</h3>
+				<p>
+					Year one - foundation phase. In the first half, you'll get to know the field of Classical instruments gets used to the study load and learn the basics of building a classical guitar.
+					Year two - The focus is shifted more towards acoustics.
+					Year three - this year you'll get to experience the field by going on an internship. Year four - You'll go on an exchange course - you can choose the country of interest.
+				</p>
 			</article>
 		</div>
 		<aside>
