--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 				<div class="indexbox" id="campusbox">
 					<a href="">
 						<div class="overlay">
-							Campus
+							<p>Campus</p>
 						</div>
 					</a>
 				</div>
 				<div class="indexbox" id="coursebox">
 					<a href="courses.html">
 						<div class="overlay">
-							Courses
+							<p>Courses</p>
 						</div>
 					</a>
 				</div>			
