Changed the overlay - added more content

--- a/courses.html
+++ b/courses.html
@@ -52,8 +52,14 @@
 				</p>
 				<h2>Content</h2>
 				<p>
-					Year one - foundation phase. In the first half, you'll get to know the field of Electrical engineering gets used to the study load. Year two - The focus is shifted more towards the specific subjects in the study: embedded systems and power systems
-					Year three - this year you'll get to experience the field by going on an internship. Year four - You'll go on an exchange course - you can choose the country of interest.
+					<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Electrical engineering gets used to the study load. 
+					<br><br><b>Year two</b> - The focus is shifted more towards the specific subjects in the study: embedded systems and power systems
+					<br><br><b>Year three</b> - this year you'll get to experience the field by going on an internship. 
+					<br><br><b>Year four</b> - You'll go on an exchange course - you can choose the country of interest.
+				</p>
+				<h2>Career prospects </h2>
+				<p>
+					After you complete the course you can work in the field of Electrical engineering as a quality, software and or hardware engineer.
 				</p>
 			</article>
 			<article>
@@ -68,8 +74,14 @@
 				</p>
 				<h2>Content</h2>
 				<p>
-					Year one - foundation phase. In the first half, you'll get to know the field of Electrical engineering gets used to the study load. Year two - The focus is shifted more towards the specific subjects in the study: embedded systems and power systems
-					Year three - this year you'll get to experience the field by going on an internship. Year four - You'll go on an exchange course - you can choose the country of interest.
+					<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Information technology gets used to the study load.
+					<br><br><b>Year two</b> - The focus is shifted more towards the specific subjects in the study: software engineering and databases.
+					<br><br><b>Year three</b> - this year you'll get to experience the field by going on an internship.
+					<br><br><b>Year four</b> - You'll go on an exchange course - you can choose the country of interest.
+				</p>
+				<h2>Career prospects</h2>
+				<p>
+					After you complete the course you can work in the field of Information technology as a software engineer or a project leader.
 				</p>
 			</article>
 			
