--- a/courses.html
+++ b/courses.html
@@ -41,6 +41,21 @@
 	<div class="wrapper">
 		<div id="content">
 			<article>
+				<div id='general'>
+					<div class="overlayNoTransition">
+						<p>General reqiurements</p>
+					</div>
+				</div>
+				<p>
+					<br>What we care about the most is your motivation. We suggest you spend a reasonable amount of time writing your motivational letter. Also as the course is in English you are expected to have your English test passed. Below you can see the list of English tests that are acceptable.
+				</p>
+				<h2>English requirements</h2>
+				<p>
+					An <b>IELTS</b> score of at least <b>5.0</b> or <b>TOEFL</b> scores of <b>500</b> (paper-based),<b>173</b> (computer-based) or <b>60</b> (internet-based) or a <b>Cambridge ESOL score FCE-C.</b>
+					<br><br><b>High school graduation diploma</b> from an accredited institution.
+				
+			</article>
+			<article>
 				<div id='electricalEngineering'>
 					<div class="overlay">
 						<p>Electrical engineering</p>
