--- a/courses.html
+++ b/courses.html
@@ -43,18 +43,40 @@
 			<article>
 				<div id='general'>
 					<div class="overlayNoTransition">
-						<p>General reqiurements</p>
+						<p>General requirements</p>
 					</div>
 				</div>
+				<h2>Application Deadlines</h2>
+				<p><b>September Start</b></p>
+				<p>EU/EER Applicants: 15 August
+				<br>Non-EU Applicants: 31 May</p>
+				<p><b>February Start</b></p>
+				<p>EU/EER Applicants: 17 January
+				<br>Non-EU Applicants: 31 October</p>
 				<p>
-					<br>What we care about the most is your motivation. We suggest you spend a reasonable amount of time writing your motivational letter. Also as the course is in English you are expected to have your English test passed. Below you can see the list of English tests that are acceptable.
+					What we care about the most is your motivation. We suggest you spend a reasonable amount of time writing your motivational letter. Also as the course is in English you are expected to have your English test passed. Below you can see the list of English tests that are acceptable.
 				</p>
 				<h2>English requirements</h2>
 				<p>
 					An <b>IELTS</b> score of at least <b>5.0</b> or <b>TOEFL</b> scores of <b>500</b> (paper-based),<b>173</b> (computer-based) or <b>60</b> (internet-based) or a <b>Cambridge ESOL score FCE-C.</b>
 					<br><br><b>High school graduation diploma</b> from an accredited institution.
+				</p>
 				
-			</article>
+</article>
+
+				<article>
+				<div id='apply'>
+					<div class="overlayNoTransition">
+						<p>How to apply</p>
+					</div>
+				</div>
+				<h2>Application procedure</h2>
+				<br><p><b>Step 1</b> -	Check the General requirements	</p>
+				<br><p><b>Step 2</b> -	Register on Studielink      	</p>
+				<br><p><b>Step 3</b> - 	Submit application documents	</p>
+				<br><p><b>Step 4</b> - 	Finalise your application    	</p>
+				</article>
+				
 			<article>
 				<div id='electricalEngineering'>
 					<div class="overlay">
