Added a COURSES.txt document

--- a/courses.html
+++ b/courses.html
@@ -60,7 +60,7 @@
 				<p>
 					An <b>IELTS</b> score of at least <b>5.0</b> or <b>TOEFL</b> scores of <b>500</b> (paper-based),<b>173</b> (computer-based) or <b>60</b> (internet-based) or a <b>Cambridge ESOL score FCE-C.</b>
 					<br><br><b>High school graduation diploma</b> from an accredited institution.
-				</p>
+				<br><br></p>
 				
 </article>
 
@@ -74,12 +74,12 @@
 				<br><p><b>Step 1</b> -	Check the General requirements	</p>
 				<br><p><b>Step 2</b> -	Register on Studielink      	</p>
 				<br><p><b>Step 3</b> - 	Submit application documents	</p>
-				<br><p><b>Step 4</b> - 	Finalise your application    	</p>
+				<br><p><b>Step 4</b> - 	Finalise your application    	</p><br>
 				</article>
 				
 			<article>
 				<div id='electricalEngineering'>
-					<div class="overlay">
+					<div class="overlayNoTransition">
 						<p>Electrical engineering</p>
 					</div>
 				</div>
@@ -97,11 +97,11 @@
 				<h2>Career prospects </h2>
 				<p>
 					After you complete the course you can work in the field of Electrical engineering as a quality, software and or hardware engineer.
-				</p>
+				<br><br></p>
 			</article>
 			<article>
 				<div id='informationTechnology'>
-					<div class="overlay">
+					<div class="overlayNoTransition">
 						<p>Information technology</p>
 					</div>
 				</div>
@@ -119,7 +119,7 @@
 				<h2>Career prospects</h2>
 				<p>
 					After you complete the course you can work in the field of Information technology as a software engineer or a project leader.
-				</p>
+				<br><br></p>
 			</article>
 			
 
