Removed some redundancy from -  courses -

--- a/courses.html
+++ b/courses.html
@@ -41,7 +41,7 @@
 	<div class="wrapper">
 		<div id="content">
 			<article>
-				<div id='general'>
+				<div class="banner" id='general'>
 					<div class="overlayNoTransition">
 						<p>General requirements</p>
 					</div>
@@ -65,7 +65,7 @@
 </article>
 
 				<article>
-				<div id='apply'>
+				<div class="banner" id='apply'>
 					<div class="overlayNoTransition">
 						<p>How to apply</p>
 					</div>
@@ -78,7 +78,7 @@
 				</article>
 				
 			<article>
-				<div id='electricalEngineering'>
+				<div class="banner" id='electricalEngineering'>
 					<div class="overlayNoTransition">
 						<p>Electrical engineering</p>
 					</div>
@@ -100,9 +100,56 @@
 				<br><br></p>
 			</article>
 			<article>
-				<div id='informationTechnology'>
+				<div class="banner" id='informationTechnology'>
 					<div class="overlayNoTransition">
 						<p>Information technology</p>
+					</div>
+				</div>
+				<h2>Introduction</h2>
+				<p>
+					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
+				</p>
+				<h2>Content</h2>
+				<p>
+					<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Information technology gets used to the study load.
+					<br><br><b>Year two</b> - The focus is shifted more towards the specific subjects in the study: software engineering and databases.
+					<br><br><b>Year three</b> - this year you'll get to experience the field by going on an internship.
+					<br><br><b>Year four</b> - You'll go on an exchange course - you can choose the country of interest.
+				</p>
+				<h2>Career prospects</h2>
+				<p>
+					After you complete the course you can work in the field of Information technology as a software engineer or a project leader.
+				<br><br></p>
+			</article>
+
+
+			<article>
+				<div class="banner" id='electronicMusic'>
+					<div class="overlayNoTransition">
+						<p>Electronic music</p>
+					</div>
+				</div>
+				<h2>Introduction</h2>
+				<p>
+					The Bachelor's course in Electrical Engineering in Da Vinci University will give you a great start in this exciting field. With our great team of teachers, you'll grow your knowledge in the field of Electrical Engineering. You can start the study with no prior knowledge of our experienced team will guide you through the course answering all of your questions.
+				</p>
+				<h2>Content</h2>
+				<p>
+					<b>Year one</b> - foundation phase. In the first half, you'll get to know the field of Information technology gets used to the study load.
+					<br><br><b>Year two</b> - The focus is shifted more towards the specific subjects in the study: software engineering and databases.
+					<br><br><b>Year three</b> - this year you'll get to experience the field by going on an internship.
+					<br><br><b>Year four</b> - You'll go on an exchange course - you can choose the country of interest.
+				</p>
+				<h2>Career prospects</h2>
+				<p>
+					After you complete the course you can work in the field of Information technology as a software engineer or a project leader.
+				<br><br></p>
+			</article>
+			
+			<article>
+				<div class="banner" id='classicalInstruments'>
+					<div class="overlayNoTransition">
+						<p>Classical instruments</p>
 					</div>
 				</div>
 				<h2>Introduction</h2>
