--- a/about.html
+++ b/about.html
@@ -43,36 +43,43 @@
 	<div class="wrapper">
 		<div id="content">
 			<article>
-				<h2>Study international at<br>Da Vinci University</h2>
+				<h2>About Da Vinci University</h2>
 				<p>
-					Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?
+					When you come to our university you will directly see that it is a true embodiment of the meaning of our name. We are just like Da Vinci – we compare various disciplines in one place, we bring everything together and make it work smoothly like a well-built machine.
 				</p>
+			
 			</article>
-			<article class="dualbox">
-				<div class="indexbox" id="campusbox">
-					<a href="">
-						<div class="overlay">
-							Campus
-						</div>
-					</a>
-				</div>
-				<div class="indexbox" id="coursebox">
-					<a href="">
-						<div class="overlay">
-							Courses
-						</div>
-					</a>
-				</div>			
-			</article>
+			
 			<article>
-				<h2>More than just a Number</h2>
+				<h2>About Our Logo</h2>
 				<p>
-				quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?
+					Our logo is the virtual model of the all famous Da Vinci’s Vitruvian Man. As known, The Vitruvian Man is a visual representation of the canon of proportions. There, the man and architecture blend together to a unified picture of proportions of everything. Same in our university – we blend man with disciplines, bringing them together and giving both the best of each other.
 				</p>
-
+			
+			</article>
+			
+			<article>
+				<h2>Branches of Da Vinci University</h2>
 				<p>
-				magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit? quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur 
+					Our University so far has two locations. Those are in Emmen and Groningen. Both locations are fully open to all students of Da Vinci University no matter the campus. Therefore, thanks to the small distance, all students are welcome to use facilities of both campuses.
 				</p>
+			
+			</article>
+			
+			<article>
+				<h2>Courses available</h2>
+				<p>
+					Our university provides a variety of courses to choose from. For the most technical ones we have Electrical Engineering course. For those eager to know how to find everything we have Information Technology. For the romantic creators we have a course of Building Classical Instruments. And, of course, we can accommodate the most lively and technology-friendly students with our Electronic Music course.
+				</p>
+			
+			</article>
+			
+			<article>
+				<h2>Learning style</h2>
+				<p>
+					For our university we chose to have a diverse style of obtaining skills and education. We decided, that the best way to prepare students for real world is to give them viewpoints both from practical and theoretical sides. This means that apart from more practical workshops, we also have a program of project based learning, where students get a case, and through theoretical approaches try to figure out resolutions.
+				</p>
+			
 			</article>
 		</div>
 		<aside>
